[package]
name = "infector_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
rand = "0.9.0"
anyhow = "1.0.97"
axum-debug = "0.3.3"
axum-macros = "0.5.0"
ctrlc = "3.4.5"
base64 = "0.22.1"
curl = "0.4.47"
is-ip = "0.1.0"
addr = "0.15.6"
aes-gcm = "0.10.3"
hex = "0.4.3"
phf = { version = "0.11.3", features = ["macros"] }
chrono = "0.4.40"
axum-client-ip = "0.7.0"




